--- a/.gitignore
+++ b/.gitignore
@@ -109,7 +109,7 @@ dist
 # DynamoDB Local files
 .dynamodb/
 
-# TernJS port file
+# TernJS port fileasdasd
 .tern-port
 
 # Stores VSCode versions used for testing VSCode extensions
